src: make code jdk9 ready
Motivation:
evolution

Modification:
update code to use jdk9 compatible API. Notice, that
jdk9 is not required.

Result:
no warnings when compiling with jdk8 or jdk9

Acked-by: Al Rossi
Target: master